iRedMail-0.9.2:
    * Improvements:
        - Fix 'The Logjam Attack' ssl related issue. Reference:
          https://weakdh.org/
        - Improve Fail2ban filter `postfix.iredmail.conf` to prevent DoS
          attack to SMTP service.

iRedMail-0.9.1:
    * Works on new distribution releases:
        - Debian 8, Ubuntu 15.04. Notes:
            o Roundcube and iRedAdmin are now stored under /opt/www.
            o Cluebringer is not installed due to package missing in official
              repo, that means your server doesn't support greylisting and
              throttling.
            o SOGo is not installed due to package missing in upstream (SOGo)
              repo.

        - OpenBSd 5.7. Notes:
            o No official MySQL binary packages, so please use MariaDB instead.

    * Drop support for old distribution releases:
        - Ubuntu 12.04, 14.10. Please use Ubuntu 14.04 LTS or 15.04 instead.

    * Improvements:
        - Log most terminal output of iRedMail installation to file
          'runtime/install.log', used for troubleshooting after installation.
        - Backup scripts are able to delete old backup copies. Default setting
          is keeping backup copies for 90 days.
        - [LDAP] Allow mailing list account to use attributes: gidNumber,
          memberUid.
        - Don't install both Apache and Nginx, just one of them.

          Debian/Ubuntu package maintainer over-designed the post-install
          script, it will restart service after package installed, if we have
          both installed, installing another one will fail, because network
          ports are used by the first one.

          Same reason as above, if we have both installed, upgrading both of
          them will trigger service restarting too. This may cause the
          currently running web service cannot start.

        - Make Dovecot subscribe newly created folder automatically.
          Thanks Michael Telatynski <postmaster _at_ webdevguru.co.uk> for the