@@ -87,8 +87,19 @@ nginx_config()
     # Copy uwsgi config file for iRedAdmin
     [ -d ${UWSGI_CONF_DIR} ] || mkdir -p ${UWSGI_CONF_DIR} &>/dev/null
 
+    backup_file ${UWSGI_CONF} ${IREDADMIN_UWSGI_CONF}
+
     if [ X"${DISTRO}" == X'RHEL' ]; then
-        cp ${SAMPLE_DIR}/nginx/uwsgi_iredadmin.ini ${IREDADMIN_UWSGI_CONF}
+        cp -f ${SAMPLE_DIR}/nginx/uwsgi.ini ${UWSGI_CONF}
+
+        perl -pi -e 's/^(uid.*)/#${1}/' ${UWSGI_CONF}
+        perl -pi -e 's/^(gid.*)/#${1}/' ${UWSGI_CONF}
+        perl -pi -e 's#^(pidfile.*=).*#${1} $ENV{UWSGI_PID}#' ${UWSGI_CONF}
+        perl -pi -e 's#^(emperor *=).*#${1} $ENV{UWSGI_CONF_DIR}#' ${UWSGI_CONF}
+        perl -pi -e 's#^(emperor-tyrant.*=).*#${1} false#' ${UWSGI_CONF}
+        perl -pi -e 's#^(stats.*=).*#${1} $ENV{UWSGI_SOCKET}#' ${UWSGI_CONF}
+
+        cp -f ${SAMPLE_DIR}/nginx/uwsgi_iredadmin.ini ${IREDADMIN_UWSGI_CONF}
     elif [ X"${DISTRO}" == X'DEBIAN' -o X"${DISTRO}" == X'UBUNTU' ]; then
         cp ${SAMPLE_DIR}/nginx/uwsgi_iredadmin.ini ${IREDADMIN_UWSGI_CONF}
         perl -pi -e 's/^(pidfile.*)/#${1}/' ${IREDADMIN_UWSGI_CONF}
